# git_employee_management_system

./: CMakeLists.txt  boss.cpp  boss.h  general_staff.cpp  general_staff.h  main.cpp  manager.cpp  manager.h  readme.md  worker.h  worker_manager.cpp  worker_manager.h
